--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steamer-simple",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "simple-webpack-boilerplate",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
@@ -30,10 +30,7 @@
   "browserslist": [
     "last 5 versions"
   ],
-  "dependencies": {
-    "html-res-webpack-plugin": "^1.3.1",
-    "yarn": "^0.19.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "ak-webpack-plugin": "^1.0.0",
     "autoprefixer": "^6.5.4",
