--- a/package.json
+++ b/package.json
@@ -70,10 +70,13 @@
     "style-loader": "^0.13.0",
     "stylelint": "^7.7.1",
     "stylelint-config-standard": "^15.0.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.4.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.17.0",
     "webpack-md5-hash": "^0.0.5",
     "webpack-spritesmith": "^0.3.0",
     "webpack-uglify-parallel": "^0.1.2"
