--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steamer-simple",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "simple-webpack-boilerplate",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
@@ -43,6 +43,7 @@
     "clean-webpack-plugin": "^0.1.14",
     "copy-webpack-plugin-hash": "^4.0.1",
     "css-loader": "^0.22.0",
+    "ejs-compiled-loader": "^1.1.0",
     "eslint": "^3.12.2",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-react": "^6.8.0",
@@ -58,6 +59,8 @@
     "image-webpack-loader": "^1.8.0",
     "immutable": "^3.7.6",
     "imports-loader": "^0.6.3",
+    "jade": "^1.7.0",
+    "jade-loader": "^0.8.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "postcss-import": "^9.0.0",
