--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "steamer-simple",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "simple-webpack-boilerplate",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
     "start": "node ./tools/start.js",
+    "dev": "npm start",
     "dist": "node ./tools/dist.js",
-    "dev": "node ./tools/dev.js",
+    "pub": "npm run dist",
+    "dev:src": "node ./tools/dev.js",
     "test": "",
     "lint": "eslint src&&stylelint src/**/*.less"
   },
