--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steamer-simple",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "simple-webpack-boilerplate",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "dev": "npm start",
     "dist": "node ./tools/dist.js",
     "pub": "npm run dist",
-    "dev:src": "node ./tools/dev.js",
+    "source": "node ./tools/dev.js",
     "test": "",
     "lint": "eslint src&&stylelint src/**/*.less"
   },
@@ -34,57 +34,59 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "^6.5.4",
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.8",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.18.0",
-    "browserslist": "^1.5.1",
-    "caniuse-db": "^1.0.30000602",
-    "clean-webpack-plugin": "^0.1.14",
+    "browserslist": "^1.7.7",
+    "caniuse-db": "^1.0.30000639",
+    "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin-hash": "^4.0.1",
-    "css-loader": "^0.22.0",
+    "css-loader": "^0.27.3",
     "ejs-compiled-loader": "^1.1.0",
-    "eslint": "^3.12.2",
-    "eslint-plugin-babel": "^4.0.0",
-    "eslint-plugin-react": "^6.8.0",
-    "exports-loader": "^0.6.2",
-    "expose-loader": "^0.7.1",
-    "express": "^4.13.4",
+    "eslint": "^3.18.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-react": "^6.10.3",
+    "exports-loader": "^0.6.4",
+    "expose-loader": "^0.7.3",
+    "express": "^4.15.2",
     "extract-text-webpack-plugin-steamer": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "happypack": "^3.0.0",
-    "html-loader": "^0.4.4",
+    "file-loader": "^0.10.1",
+    "handlebars": "^4.0.6",
+    "handlebars-loader": "^1.4.0",
+    "happypack": "^3.0.3",
+    "html-loader": "^0.4.5",
     "html-res-webpack-plugin": "^1.3.3",
-    "http-proxy": "^1.12.0",
-    "image-webpack-loader": "^1.8.0",
-    "immutable": "^3.7.6",
-    "imports-loader": "^0.6.3",
+    "http-proxy": "^1.16.2",
+    "image-webpack-loader": "^3.2.0",
+    "imports-loader": "^0.7.1",
     "jade": "^1.7.0",
     "jade-loader": "^0.8.0",
-    "less": "^2.7.1",
+    "less": "^2.7.2",
     "less-loader": "^2.2.3",
-    "postcss-import": "^9.0.0",
-    "postcss-loader": "^1.2.1",
+    "nib": "^1.1.2",
+    "postcss-import": "^9.1.0",
+    "postcss-loader": "^1.3.3",
     "proxy-middleware": "^0.15.0",
-    "steamer-browserutils": "^1.0.0",
-    "steamer-net": "^1.1.1",
+    "steamer-browserutils": "^1.0.1",
     "steamer-responsive": "^0.2.0",
-    "steamer-webpack-utils": "^0.1.3",
-    "style-loader": "^0.13.0",
-    "stylelint": "^7.7.1",
-    "stylelint-config-standard": "^15.0.1",
+    "steamer-webpack-utils": "^0.1.5",
+    "style-loader": "^0.15.0",
+    "stylelint": "^7.9.0",
+    "stylelint-config-standard": "^16.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
-    "url-loader": "^0.5.6",
+    "url-loader": "^0.5.8",
+    "vconsole": "^2.5.2",
     "webpack": "^1.14.0",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-dev-server": "^1.16.2",
-    "webpack-hot-middleware": "^2.17.0",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-dev-server": "^1.16.3",
+    "webpack-hot-middleware": "^2.17.1",
     "webpack-md5-hash": "^0.0.5",
-    "webpack-spritesmith": "^0.3.0",
-    "webpack-uglify-parallel": "^0.1.2"
+    "webpack-spritesmith": "^0.3.3",
+    "webpack-uglify-parallel": "^0.1.3"
   },
   "engines": {
     "node": ">=5.0.0"
