--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "simple-webpack-boilerplate",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
-    "start": "node ./tools/start.js",
-    "dev": "npm start",
-    "dist": "node ./tools/dist.js",
+    "start": "npm run dev",
+    "dev": "node ./tools/script.js --mode=development",
+    "dist": "node ./tools/script.js --mode=production",
     "pub": "npm run dist",
-    "source": "node ./tools/dev.js",
+    "source": "node ./tools/script.js --mode=source",
     "test": "",
-    "lint": "eslint src&&stylelint src/**/*.less"
+    "lint": "eslint src && stylelint src/**/*.less"
   },
   "repository": {
     "type": "git",
@@ -45,14 +45,13 @@
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin-hash": "^4.0.1",
     "css-loader": "^0.27.3",
-    "ejs-compiled-loader": "^1.1.0",
     "eslint": "^3.18.0",
     "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-react": "^6.10.3",
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.3",
     "express": "^4.15.2",
-    "extract-text-webpack-plugin-steamer": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "handlebars": "^4.0.6",
     "handlebars-loader": "^1.4.0",
@@ -62,17 +61,16 @@
     "http-proxy": "^1.16.2",
     "image-webpack-loader": "^3.2.0",
     "imports-loader": "^0.7.1",
-    "jade": "^1.7.0",
-    "jade-loader": "^0.8.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
-    "nib": "^1.1.2",
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
     "proxy-middleware": "^0.15.0",
+    "pug": "^2.0.0-beta11",
+    "pug-loader": "^2.3.0",
     "steamer-browserutils": "^1.0.1",
     "steamer-responsive": "^0.2.0",
-    "steamer-webpack-utils": "^0.1.5",
+    "steamer-webpack-utils": "^1.0.0",
     "style-loader": "^0.15.0",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
@@ -80,11 +78,12 @@
     "stylus-loader": "^2.4.0",
     "url-loader": "^0.5.8",
     "vconsole": "^2.5.2",
-    "webpack": "^1.14.0",
+    "webpack": "^2.3.1 ",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-dev-server": "^1.16.3",
+    "webpack-dev-server": "^2.4.2",
     "webpack-hot-middleware": "^2.17.1",
     "webpack-md5-hash": "^0.0.5",
+    "webpack-merge": "^4.1.0",
     "webpack-spritesmith": "^0.3.3",
     "webpack-uglify-parallel": "^0.1.3"
   },
