--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steamer-simple",
-  "version": "2.0.0",
+  "version": "2.0.0-beta.1",
   "description": "simple-webpack-boilerplate",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
@@ -10,7 +10,8 @@
     "pub": "npm run dist",
     "source": "node ./tools/script.js --mode=source",
     "test": "",
-    "lint": "eslint src && stylelint src/**/*.less"
+    "lint": "eslint src && stylelint src/**/*.less",
+    "tpl": "node ./tools/template.js"
   },
   "repository": {
     "type": "git",
