--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "simple-webpack-boilerplate",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
-    "start": "npm run dev",
+    "start": "node ./tools/script.js --mode=development",
     "dev": "node ./tools/script.js --mode=development",
     "dist": "node ./tools/script.js --mode=production",
-    "pub": "npm run dist",
+    "pub": "node ./tools/script.js --mode=production",
     "source": "node ./tools/script.js --mode=source",
     "test": "",
     "lint": "eslint src && stylelint src/**/*.less",
