--- a/package.json
+++ b/package.json
@@ -59,14 +59,13 @@
     "happypack": "^3.0.3",
     "html-loader": "^0.4.5",
     "html-res-webpack-plugin": "^2.0.0",
-    "http-proxy": "^1.16.2",
+    "http-proxy-middleware": "^0.17.4",
     "image-webpack-loader": "^3.2.0",
     "imports-loader": "^0.7.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.2",
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
-    "proxy-middleware": "^0.15.0",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
     "steamer-browserutils": "^1.0.1",
