--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steamer-simple",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-beta.2",
   "description": "simple-webpack-boilerplate",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
@@ -11,7 +11,8 @@
     "source": "node ./tools/script.js --mode=source",
     "test": "",
     "lint": "eslint src && stylelint src/**/*.less",
-    "tpl": "node ./tools/template.js"
+    "tpl": "node ./tools/template.js",
+    "loader": "node ./tools/loaders.js"
   },
   "repository": {
     "type": "git",
@@ -64,18 +65,19 @@
     "imports-loader": "^0.7.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.2",
+    "node-sass": "^4.5.2",
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
+    "sass-loader": "^6.0.3",
+    "spritesheet-templates-steamer": "^1.0.0",
     "steamer-browserutils": "^1.0.1",
     "steamer-responsive": "^0.2.0",
     "steamer-webpack-utils": "^1.0.1",
     "style-loader": "^0.15.0",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^2.4.0",
     "url-loader": "^0.5.8",
     "vconsole": "^2.5.2",
     "webpack": "^2.3.2 ",
