--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "source": "node ./tools/script.js --mode=source",
     "test": "",
     "lint": "eslint src && stylelint src/**/*.less",
-    "tpl": "node ./tools/template.js",
-    "loader": "node ./tools/loaders.js"
+    "tpl": "node ./tools/template.js"
   },
   "repository": {
     "type": "git",
@@ -55,8 +54,6 @@
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
-    "handlebars": "^4.0.6",
-    "handlebars-loader": "^1.4.0",
     "happypack": "^3.0.3",
     "html-loader": "^0.4.5",
     "html-res-webpack-plugin": "^2.0.0",
@@ -65,12 +62,9 @@
     "imports-loader": "^0.7.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.2",
-    "node-sass": "^4.5.2",
+    "npm-install-webpack-plugin": "github:webpack-contrib/npm-install-webpack-plugin",
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
-    "pug": "^2.0.0-beta11",
-    "pug-loader": "^2.3.0",
-    "sass-loader": "^6.0.3",
     "spritesheet-templates-steamer": "^1.0.0",
     "steamer-browserutils": "^1.0.1",
     "steamer-responsive": "^0.2.0",
