--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steamer-simple",
-  "version": "2.0.0-beta.2",
+  "version": "2.0.0-beta.3",
   "description": "simple-webpack-boilerplate",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "url": "git+https://github.com/SteamerTeam/steamer-simple.git"
   },
   "keywords": [
+    "steamer starterkit",
     "simple",
     "webpack",
     "steamerjs",
@@ -74,7 +75,7 @@
     "stylelint-config-standard": "^16.0.0",
     "url-loader": "^0.5.8",
     "vconsole": "^2.5.2",
-    "webpack": "^2.3.2 ",
+    "webpack": "^2.3.3 ",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-hot-middleware": "^2.17.1",
