--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.0.0-beta.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.18.0",
     "browserslist": "^1.7.7",
@@ -49,7 +49,6 @@
     "css-loader": "^0.27.3",
     "eslint": "^3.18.0",
     "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-react": "^6.10.3",
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.3",
     "express": "^4.15.2",
