--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steamer-simple",
-  "version": "2.0.0-beta.3",
+  "version": "2.0.0-beta.4",
   "description": "simple-webpack-boilerplate",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
@@ -57,7 +57,6 @@
     "happypack": "^3.0.3",
     "html-loader": "^0.4.5",
     "html-res-webpack-plugin": "^2.0.0",
-    "http-proxy-middleware": "^0.17.4",
     "image-webpack-loader": "^3.3.0",
     "imports-loader": "^0.7.1",
     "less": "^2.7.2",
@@ -65,6 +64,7 @@
     "npm-install-webpack-plugin-steamer": "^4.0.4",
     "postcss-import": "^9.1.0",
     "postcss-loader": "^1.3.3",
+    "proxy-middleware": "^0.15.0",
     "spritesheet-templates-steamer": "^1.0.0",
     "steamer-browserutils": "^1.0.1",
     "steamer-responsive": "^0.2.0",
