--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   	"plugins": [],
     "presets": [
-        ["es2015", {"loose": true}]
+        ["es2015", {"loose": true, "module": false}],
     ]
 }
