--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steamer-simple",
-  "version": "2.0.0-beta.7",
+  "version": "2.0.0-beta.8",
   "description": "simple-webpack-boilerplate",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
@@ -36,48 +36,50 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.0.0-beta.1",
+    "autoprefixer": "^7.1.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-es2015": "^6.18.0",
-    "browserslist": "^1.7.7",
-    "caniuse-db": "^1.0.30000639",
+    "babel-preset-es2015": "^6.24.1",
+    "browserslist": "^2.1.4",
+    "cache-loader": "^1.0.3",
+    "caniuse-db": "^1.0.30000676",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin-hash": "^4.0.1",
-    "css-loader": "^0.27.3",
-    "eslint": "^3.18.0",
+    "css-loader": "^0.28.4",
+    "eslint": "^3.19.0",
     "eslint-plugin-babel": "^4.1.1",
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.3",
-    "express": "^4.15.2",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
-    "happypack": "^3.0.3",
+    "file-loader": "^0.11.1",
+    "happypack": "^4.0.0-beta.1",
     "html-loader": "^0.4.5",
     "html-res-webpack-plugin": "^2.0.0",
-    "image-webpack-loader": "^3.3.0",
+    "image-webpack-loader": "^3.3.1",
     "imports-loader": "^0.7.1",
     "less": "^2.7.2",
-    "less-loader": "^4.0.2",
+    "less-loader": "^4.0.4",
+    "lodash.merge": "^4.6.0",
     "npm-install-webpack-plugin-steamer": "^4.0.4",
-    "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.3.3",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.5",
     "proxy-middleware": "^0.15.0",
     "spritesheet-templates-steamer": "^1.0.0",
     "steamer-browserutils": "^1.0.1",
     "steamer-responsive": "^0.2.0",
     "steamer-webpack-utils": "^1.0.2",
-    "style-loader": "^0.15.0",
-    "stylelint": "^7.9.0",
+    "style-loader": "^0.18.1",
+    "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
     "url-loader": "^0.5.8",
     "vconsole": "^2.5.2",
-    "webpack": "^2.4.1 ",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-dev-server": "^2.4.2",
-    "webpack-hot-middleware": "^2.17.1",
+    "webpack": "^2.6.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-hot-middleware": "^2.18.0",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "^4.1.0",
     "webpack-spritesmith": "^0.3.3",
