--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "pub": "node ./tools/script.js --mode=production",
     "source": "node ./tools/script.js --mode=source",
     "test": "",
-    "lint": "eslint src && stylelint src/**/*.less",
+    "lint": "eslint src & stylelint src/**/*.less",
+    "lint:js": "eslint src",
+    "lint:style": "stylelint src/**/*.less",
     "tpl": "node ./tools/template.js"
   },
   "repository": {
@@ -36,45 +38,47 @@
   ],
   "dependencies": {},
   "devDependencies": {
+    "@alloyteam/eslint-config-standard": "0.0.5",
+    "@alloyteam/stylelint-config-standard": "0.0.2",
     "autoprefixer": "^7.1.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
-    "browserslist": "^2.1.4",
+    "browserslist": "^2.1.5",
     "cache-loader": "^1.0.3",
-    "caniuse-db": "^1.0.30000676",
+    "caniuse-db": "^1.0.30000686",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin-hash": "^4.0.1",
     "css-loader": "^0.28.4",
-    "eslint": "^3.19.0",
+    "eslint": "^4.0.0",
     "eslint-plugin-babel": "^4.1.1",
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.3",
     "express": "^4.15.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "file-loader": "^0.11.2",
     "happypack": "^4.0.0-beta.1",
     "html-loader": "^0.4.5",
-    "html-res-webpack-plugin": "^2.0.0",
+    "html-res-webpack-plugin": "^2.0.5",
     "http-proxy-middleware": "^0.17.4",
     "image-webpack-loader": "^3.3.1",
     "imports-loader": "^0.7.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "lodash.merge": "^4.6.0",
-    "npm-install-webpack-plugin-steamer": "^4.0.4",
+    "npm-install-webpack-plugin-steamer": "^4.0.5",
     "postcss-import": "^10.0.0",
-    "postcss-loader": "^2.0.5",
+    "postcss-loader": "^2.0.6",
     "spritesheet-templates-steamer": "^1.0.0",
     "steamer-browserutils": "^1.0.1",
     "steamer-responsive": "^0.2.0",
     "steamer-webpack-utils": "^1.0.2",
-    "style-loader": "^0.18.1",
-    "stylelint": "^7.10.1",
+    "style-loader": "^0.18.2",
+    "stylelint": "^7.11.1",
     "stylelint-config-standard": "^16.0.0",
-    "url-loader": "^0.5.8",
+    "url-loader": "^0.5.9",
     "vconsole": "^2.5.2",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
