--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "test": "",
     "lint": "eslint src & stylelint src/**/*.less",
     "lint:js": "eslint src",
-    "lint:style": "stylelint src/**/*.less",
-    "tpl": "node ./tools/template.js"
+    "lint:style": "stylelint src/**/*.less"
   },
   "repository": {
     "type": "git",
@@ -42,14 +41,14 @@
     "@alloyteam/stylelint-config-standard": "0.0.2",
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "browserslist": "^2.1.5",
     "cache-loader": "^1.0.3",
     "caniuse-db": "^1.0.30000696",
     "clean-webpack-plugin": "^0.1.16",
-    "copy-webpack-plugin-hash": "^4.0.1",
+    "copy-webpack-plugin-hash": "^4.0.5",
     "css-loader": "^0.28.4",
     "eslint": "^4.1.1",
     "exports-loader": "^0.6.4",
@@ -59,18 +58,16 @@
     "file-loader": "^0.11.2",
     "happypack": "^4.0.0-beta.1",
     "html-loader": "^0.4.5",
-    "html-res-webpack-plugin": "^2.0.5",
+    "html-res-webpack-plugin": "^3.0.2",
     "http-proxy-middleware": "^0.17.4",
     "imports-loader": "^0.7.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.4",
     "lodash.merge": "^4.6.0",
-    "npm-install-webpack-plugin-steamer": "^4.0.6",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.6",
     "spritesheet-templates-steamer": "^1.0.0",
     "steamer-browserutils": "^1.0.1",
-    "steamer-responsive": "^0.2.0",
     "steamer-webpack-utils": "^1.0.2",
     "style-loader": "^0.18.2",
     "stylelint": "^7.12.0",
