--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "steamer-simple",
-  "version": "3.0.0-beta.3",
+  "version": "3.0.0-beta.4",
   "description": "simple-webpack-boilerplate",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
-    "start": "node ./tools/script.js --mode=development",
-    "dev": "node ./tools/script.js --mode=development",
-    "dist": "node ./tools/script.js --mode=production",
-    "pub": "node ./tools/script.js --mode=production",
-    "source": "node ./tools/script.js --mode=source",
+    "start": "cross-env NODE_ENV=development node ./tools/script.js",
+    "dev": "npm run start",
+    "dist": "cross-env NODE_ENV=production node ./tools/script.js",
+    "pub": "npm run dist",
     "test": "",
     "lint": "eslint src & stylelint src/**/*.less",
     "lint:js": "eslint src",
@@ -49,6 +48,7 @@
     "caniuse-db": "^1.0.30000701",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin-hash": "^4.0.5",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.2.0",
     "exports-loader": "^0.6.4",
@@ -80,8 +80,9 @@
     "webpack-hot-middleware": "^2.18.2",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "^4.1.0",
+    "webpack-parallel-uglify-plugin": "^0.4.2",
     "webpack-spritesmith": "^0.3.3",
-    "webpack-uglify-parallel": "^0.1.3"
+    "write-file-webpack-plugin": "^4.1.0"
   },
   "engines": {
     "node": ">=5.0.0"
