--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "steamer-simple",
-  "version": "3.0.0-beta.4",
-  "description": "simple-webpack-boilerplate",
+  "version": "3.0.0-beta.5",
+  "description": "alloyteam frameworkless starterkit",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development node ./tools/script.js",
@@ -43,14 +43,14 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
-    "browserslist": "^2.1.5",
+    "browserslist": "^2.2.2",
     "cache-loader": "^1.0.3",
-    "caniuse-db": "^1.0.30000701",
+    "caniuse-db": "^1.0.30000706",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin-hash": "^4.0.5",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
-    "eslint": "^4.2.0",
+    "eslint": "^4.3.0",
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.3",
     "express": "^4.15.3",
@@ -71,12 +71,11 @@
     "steamer-browserutils": "^1.0.1",
     "steamer-webpack-utils": "^1.1.0",
     "style-loader": "^0.18.2",
-    "stylelint": "^7.13.0",
+    "stylelint": "^8.0.0",
     "url-loader": "^0.5.9",
     "vconsole": "^2.5.2",
-    "webpack": "^3.2.0",
+    "webpack": "^3.4.1",
     "webpack-dev-middleware": "^1.11.0",
-    "webpack-dev-server": "^2.5.1",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "^4.1.0",
