--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steamer-simple",
-  "version": "3.0.0-beta.7",
+  "version": "3.0.0-rc.1",
   "description": "alloyteam frameworkless starterkit",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
@@ -36,29 +36,30 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "@alloyteam/eslint-config-standard": "0.0.7",
+    "@alloyteam/eslint-config-standard": "0.0.8",
     "@alloyteam/stylelint-config-standard": "0.0.2",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
-    "browserslist": "^2.2.2",
+    "browserslist": "^2.3.2",
     "cache-loader": "^1.0.3",
-    "caniuse-db": "^1.0.30000709",
+    "caniuse-db": "^1.0.30000715",
     "clean-webpack-plugin": "^0.1.16",
-    "copy-webpack-plugin-hash": "^4.0.5",
-    "cross-env": "^5.0.1",
+    "copy-webpack-plugin-hash": "^5.1.1",
+    "cross-env": "^5.0.5",
     "css-loader": "^0.28.4",
-    "eslint": "^4.3.0",
+    "eslint": "^4.4.1",
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.3",
-    "express": "^4.15.3",
+    "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "file-webpack-plugin": "^1.0.0",
     "happypack": "^4.0.0-beta.1",
-    "html-loader": "^0.5.0",
-    "html-res-webpack-plugin": "^3.1.1",
+    "html-loader": "^0.5.1",
+    "html-res-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.17.4",
     "imports-loader": "^0.7.1",
     "less": "^2.7.2",
@@ -74,9 +75,10 @@
     "stylelint": "^8.0.0",
     "url-loader": "^0.5.9",
     "vconsole": "^2.5.2",
-    "webpack": "^3.4.1",
+    "webpack": "^3.5.4",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2",
+    "webpack-manifest-plugin": "^1.3.0",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "^4.1.0",
     "webpack-parallel-uglify-plugin": "^1.0.0",
@@ -84,6 +86,6 @@
     "write-file-webpack-plugin": "^4.1.0"
   },
   "engines": {
-    "node": ">=5.0.0"
+    "node": ">=6.10.0"
   }
 }
