--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steamer-simple",
-  "version": "3.0.0-rc.5",
+  "version": "3.0.1",
   "description": "alloyteam frameworkless starterkit",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
@@ -38,7 +38,7 @@
   "devDependencies": {
     "@alloyteam/eslint-config-standard": "0.0.9",
     "@alloyteam/stylelint-config-standard": "0.0.2",
-    "autoprefixer": "^7.1.5",
+    "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -47,16 +47,17 @@
     "babel-runtime": "^6.26.0",
     "browserslist": "^2.5.1",
     "cache-loader": "^1.1.0",
-    "caniuse-db": "^1.0.30000747",
+    "caniuse-db": "^1.0.30000752",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin-hash": "^5.1.1",
     "cross-env": "^5.1.0",
     "css-loader": "^0.28.7",
     "eslint": "^4.9.0",
+    "eslint-config-alloy": "^1.2.1",
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.3",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^3.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "file-webpack-plugin": "^1.0.0",
     "happypack": "^4.0.0-beta.1",
@@ -64,7 +65,7 @@
     "html-res-webpack-plugin": "^3.2.1",
     "http-proxy-middleware": "^0.17.4",
     "imports-loader": "^0.7.1",
-    "less": "^2.7.2",
+    "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "lodash.merge": "^4.6.0",
     "name-all-modules-plugin": "^1.0.1",
@@ -73,10 +74,10 @@
     "spritesheet-templates-steamer": "^1.0.0",
     "steamer-browserutils": "^1.0.1",
     "steamer-webpack-utils": "^1.1.0",
-    "style-loader": "^0.18.2",
+    "style-loader": "^0.19.0",
     "stylelint": "^8.2.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "url-loader": "^0.5.9",
+    "url-loader": "^0.6.2",
     "vconsole": "^3.0.0",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
