--- a/package.json
+++ b/package.json
@@ -47,22 +47,22 @@
     "babel-runtime": "^6.26.0",
     "browserslist": "^2.11.3",
     "cache-loader": "^1.2.0",
-    "caniuse-db": "^1.0.30000793",
+    "caniuse-db": "^1.0.30000795",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin-hash": "^5.1.4",
     "cross-env": "^5.1.3",
     "css-loader": "^0.28.9",
     "eslint": "^4.16.0",
-    "eslint-config-alloy": "^1.4.0",
+    "eslint-config-alloy": "^1.4.1",
     "exports-loader": "^0.6.4",
     "expose-loader": "^0.7.4",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
-    "file-webpack-plugin": "^1.1.1",
-    "happypack": "^4.0.0-beta.1",
+    "file-webpack-plugin": "^1.2.2",
+    "happypack": "^4.0.1",
     "html-loader": "^0.5.5",
-    "html-res-webpack-plugin": "^3.2.5",
+    "html-res-webpack-plugin": "^3.2.6",
     "http-proxy-middleware": "^0.17.4",
     "imports-loader": "^0.7.1",
     "less": "^2.7.3",
@@ -72,7 +72,7 @@
     "postcss-assets": "^5.0.0",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.10",
-    "precss": "^2.0.0",
+    "precss": "^3.1.0",
     "spritesheet-templates-steamer": "^1.0.2",
     "steamer-browserutils": "^1.0.1",
     "steamer-webpack-utils": "^1.1.0",
@@ -81,7 +81,7 @@
     "uglifyjs-webpack-plugin": "^1.1.6",
     "url-loader": "^0.6.2",
     "vconsole": "^3.1.0",
-    "webpack": "^3.10.0",
+    "webpack": "^4.0.0-beta.0",
     "webpack-dev-middleware": "^2.0.4",
     "webpack-hot-middleware": "^2.21.0",
     "webpack-manifest-plugin": "^1.3.2",
