--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "uglifyjs-webpack-plugin": "^1.1.6",
     "url-loader": "^0.6.2",
     "vconsole": "^3.1.0",
-    "webpack": "^4.0.0-beta.0",
+    "webpack": "^3.10.0",
     "webpack-dev-middleware": "^2.0.4",
     "webpack-hot-middleware": "^2.21.0",
     "webpack-manifest-plugin": "^1.3.2",
