support webpack 4 and improve templates

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steamer-simple",
-  "version": "3.0.3",
+  "version": "4.0.0-beta.1",
   "description": "alloyteam frameworkless starterkit",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
@@ -38,56 +38,59 @@
   "devDependencies": {
     "@alloyteam/eslint-config-standard": "0.0.9",
     "@alloyteam/stylelint-config-standard": "0.0.2",
-    "autoprefixer": "^7.2.5",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "autoprefixer": "^8.4.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "browserslist": "^2.11.3",
-    "cache-loader": "^1.2.0",
-    "caniuse-db": "^1.0.30000795",
-    "clean-webpack-plugin": "^0.1.17",
-    "copy-webpack-plugin-hash": "^5.1.4",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.9",
-    "eslint": "^4.16.0",
-    "eslint-config-alloy": "^1.4.1",
-    "exports-loader": "^0.6.4",
-    "expose-loader": "^0.7.4",
-    "express": "^4.16.2",
+    "browserslist": "^3.2.6",
+    "cache-loader": "^1.2.2",
+    "caniuse-db": "^1.0.30000833",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin-hash": "^6.0.0",
+    "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-config-alloy": "^1.4.2",
+    "exports-loader": "^0.7.0",
+    "expose-loader": "^0.7.5",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "file-webpack-plugin": "^1.2.2",
-    "happypack": "^4.0.1",
+    "file-loader": "^1.1.11",
+    "file-webpack-plugin": "^2.0.0",
+    "happypack": "^5.0.0",
     "html-loader": "^0.5.5",
-    "html-res-webpack-plugin": "^3.2.6",
-    "http-proxy-middleware": "^0.17.4",
-    "imports-loader": "^0.7.1",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "lodash.merge": "^4.6.0",
+    "html-res-webpack-plugin": "^4.0.0",
+    "http-proxy-middleware": "^0.18.0",
+    "imports-loader": "^0.8.0",
+    "less": "^3.0.2",
+    "less-loader": "^4.1.0",
+    "lodash.merge": "^4.6.1",
+    "mini-css-extract-plugin": "^0.4.0",
     "name-all-modules-plugin": "^1.0.1",
+    "optimize-css-assets-webpack-plugin": "^4.0.1",
     "postcss-assets": "^5.0.0",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.10",
-    "precss": "^3.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.4",
     "spritesheet-templates-steamer": "^1.0.2",
     "steamer-browserutils": "^1.0.1",
     "steamer-webpack-utils": "^1.1.0",
-    "style-loader": "^0.19.1",
-    "stylelint": "^8.4.0",
-    "uglifyjs-webpack-plugin": "^1.1.6",
-    "url-loader": "^0.6.2",
-    "vconsole": "^3.1.0",
-    "webpack": "^3.10.0",
+    "style-loader": "^0.21.0",
+    "stylelint": "^9.2.0",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "^1.0.1",
+    "vconsole": "^3.2.0",
+    "webpack": "^4.6.0",
     "webpack-dev-middleware": "^2.0.4",
-    "webpack-hot-middleware": "^2.21.0",
-    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-hot-middleware": "^2.22.1",
+    "webpack-manifest-plugin": "^2.0.2",
     "webpack-md5-hash": "0.0.6",
-    "webpack-merge": "^4.1.1",
-    "webpack-spritesmith": "^0.4.0",
+    "webpack-merge": "^4.1.2",
+    "webpack-spritesmith": "^0.4.1",
     "write-file-webpack-plugin": "^4.2.0"
   },
   "engines": {
