--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "steamer-simple",
-  "version": "4.0.0-beta.5",
+  "version": "4.0.0",
   "description": "alloyteam frameworkless starterkit",
   "main": "./.steamer/steamer-simple.js",
   "scripts": {
@@ -38,59 +38,59 @@
   "devDependencies": {
     "@alloyteam/eslint-config-standard": "0.0.9",
     "@alloyteam/stylelint-config-standard": "0.0.2",
-    "autoprefixer": "^8.4.1",
+    "autoprefixer": "^9.1.3",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "browserslist": "^3.2.6",
+    "browserslist": "^4.1.0",
     "cache-loader": "^1.2.2",
-    "caniuse-db": "^1.0.30000833",
+    "caniuse-db": "^1.0.30000878",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin-hash": "^6.0.0",
-    "cross-env": "^5.1.4",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.4.0",
     "eslint-config-alloy": "^1.4.2",
     "exports-loader": "^0.7.0",
     "expose-loader": "^0.7.5",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
+    "file-loader": "^2.0.0",
     "file-webpack-plugin": "^2.0.0",
     "happypack": "^5.0.0",
     "html-loader": "^0.5.5",
-    "html-res-webpack-plugin": "^4.0.0",
+    "html-res-webpack-plugin": "^4.0.4",
     "http-proxy-middleware": "^0.18.0",
     "imports-loader": "^0.8.0",
-    "less": "^3.0.2",
+    "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "lodash.merge": "^4.6.1",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "^0.4.2",
     "name-all-modules-plugin": "^1.0.1",
-    "optimize-css-assets-webpack-plugin": "^4.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-assets": "^5.0.0",
-    "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.4",
+    "postcss-import": "^12.0.0",
+    "postcss-loader": "^3.0.0",
     "spritesheet-templates-steamer": "^1.0.2",
-    "steamer-browserutils": "^1.0.1",
+    "steamer-browserutils": "^2.0.0",
     "steamer-webpack-utils": "^1.1.0",
-    "style-loader": "^0.21.0",
-    "stylelint": "^9.2.0",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^1.0.1",
+    "style-loader": "^0.22.1",
+    "stylelint": "^9.5.0",
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "url-loader": "^1.1.1",
     "vconsole": "^3.2.0",
-    "webpack": "^4.6.0",
-    "webpack-dev-middleware": "^2.0.4",
-    "webpack-hot-middleware": "^2.22.1",
-    "webpack-manifest-plugin": "^2.0.2",
-    "webpack-merge": "^4.1.2",
-    "webpack-spritesmith": "^0.4.1",
-    "write-file-webpack-plugin": "^4.2.0"
+    "webpack": "^4.17.1",
+    "webpack-dev-middleware": "^3.2.0",
+    "webpack-hot-middleware": "^2.22.3",
+    "webpack-manifest-plugin": "^2.0.3",
+    "webpack-merge": "^4.1.4",
+    "webpack-spritesmith": "^0.5.2",
+    "write-file-webpack-plugin": "^4.3.2"
   },
   "engines": {
     "node": ">=6.10.0"
